<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipChildren="false"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>

    <!--2. 存放四个Fragment-->
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ededed"/>

    <!--3. 底部的四个选项菜单-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:baselineAligned="false">

        <!--四个部分都一样：ImageView + TextView-->


        <LinearLayout
            android:id="@+id/first_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/first_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/main_video_pic"
                android:src="@drawable/video_selctor"/>

            <TextView
                android:id="@+id/first_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_video_text"
                android:textColor="@color/video_selector"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/second_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/main_pic_pic"
                android:src="@drawable/pic_selector"/>

            <TextView
                android:id="@+id/second_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_pic_text"
                android:textColor="@color/pic_selector"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/third_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/main_form_pic"
                android:src="@drawable/form_selector"/>

            <TextView
                android:id="@+id/third_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_form_text"
                android:textColor="@color/form_selector"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/four_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/four_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/main_mine_pic"
                android:src="@drawable/mine_selector"/>

            <TextView
                android:id="@+id/four_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_mine_text"
                android:textColor="@color/mine_selector"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
