<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haoda.xiaomingkankan.activity.DownAndPlayActivity">

    <ImageView
        android:id="@+id/downandplay_iv"
        android:layout_width="235dp"
        android:layout_height="208dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/play_pic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.161"
        tools:layout_editor_absoluteY="61dp"/>

    <TextView
        android:id="@+id/downandplay_tv"
        android:layout_width="228dp"
        android:layout_height="34dp"
        android:text="@string/play_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/downandplay_iv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/downandplay_down"
        android:layout_width="108dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/play_down"
        android:textColor="#fff"
        android:background="@drawable/selector_red_corners_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downandplay_tv"
        app:layout_constraintVertical_bias="0.09"/>

    <Button
        android:id="@+id/downandplay_play"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/play_play"
        android:textColor="#fff"
        android:background="@drawable/selector_red_corners_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintLeft_toRightOf="@+id/downandplay_down"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downandplay_tv"
        app:layout_constraintVertical_bias="0.089"
        />

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.499"/>
</android.support.constraint.ConstraintLayout>
